Reduce home menu width on mobile devices to avoid conflict with mobile menu

--- a/templates/ctcprotostar/css/template.css
+++ b/templates/ctcprotostar/css/template.css
@@ -7410,6 +7410,7 @@ figcaption {
 	}
 	.nav-pills > li {
 		float: none;
+		width: 90%;
 	}
 	.nav-pills > li > a {
 		margin-right: 0;
